# Multi-Agent_Liquidity_Game

./: README.md  README_DATA.md  REPORT.md  app.py  pyproject.toml  requirements.txt
artifacts/multi_agent_basic/: maker_policy.pt  rewards.csv  taker_policy.pt
artifacts/multi_asset_gnn/: arb_policy.pt  maker_policy.pt  rewards.csv
artifacts/single_maker/: maker_policy.pt  rewards.csv
data/: asset_graph_edges.csv  asset_graph_nodes.csv  real_depth_statistics.csv  regimes.csv  synthetic_depth_profiles.csv  synthetic_orderflow_events.csv
data_big/: asset_graph_edges.csv  asset_graph_nodes.csv  real_depth_statistics.csv  regimes.csv
scripts/: analyze_results.py  generate_synthetic_datasets.py  run_multi_agent_basic.py  run_multi_asset_gnn.py  run_single_agent_maker.py
src/: __init__.py
src/agents/: __init__.py  arb_agent.py  maker_agent.py  policies.py  taker_agent.py
src/envs/: __init__.py  market_env.py  order_book.py  regimes.py
src/models/: __init__.py  gnn_encoder.py  ppo.py
src/utils/: __init__.py  config.py  data_loader.py  logging_utils.py  plotting.py  seed.py
tests/: conftest.py  test_env_basic.py  test_order_book.py
