[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi_agent_liquidity_game"
version = "0.1.0"
description = "Research sandbox for a multi-agent liquidity game with PPO and GNN observations."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["reinforcement-learning", "gnn", "market-microstructure"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

